// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput supported types number 1`] = `
<div class="base-input">
  <inputnumber-stub value="123"></inputnumber-stub>
  <select class="select-type">
    <option value="number">number</option>
  </select>
</div>
`;

exports[`BaseInput supported types string 1`] = `
<div class="base-input">
  <inputstring-stub value="string value"></inputstring-stub>
  <select class="select-type">
    <option value="string">string</option>
  </select>
</div>
`;
